--- a/HogTransformation1.html
+++ b/HogTransformation1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>สูตรวิชาการแปลงกาย</title>
+    <title>สูตรวิชาการแปลงกาย ปี 1</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
