--- a/HogTransformation1.html
+++ b/HogTransformation1.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>สูตรวิชาการแปลงกาย ปี 1</title>
+    <title>สูตรวิชาการแปลงกาย</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('pic.jpg');
+            background-image: url('HogBGpic.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
