--- a/HogTransformation1.html
+++ b/HogTransformation1.html
@@ -17,65 +17,54 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            font-size: 14px;
-            /* ลดขนาดฟอนต์จากปกติ */
+            font-size: 12px;
+            /* ลดขนาดฟอนต์อีก */
         }
 
         .container {
             background-color: rgb(255, 246, 225);
-            padding: 20px;
-            /* ลด padding จาก 30px */
-            border-radius: 16px;
-            /* เล็กลงจาก 20px */
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-            width: 320px;
-            /* ลดความกว้างจาก 400px */
+            padding: 12px;
+            /* ลด padding */
+            border-radius: 12px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 260px;
+            /* ลดกว้าง */
         }
 
         h1 {
             text-align: center;
             color: #333;
-            font-size: 20px;
-            /* ลดขนาดหัวข้อ */
+            font-size: 16px;
+            /* ลดหัวข้อ */
         }
 
         label {
             display: block;
-            margin-top: 12px;
-            /* ลด margin-top จาก 15px */
+            margin-top: 8px;
             color: #555;
-            font-size: 13px;
-            /* ลดขนาดตัวอักษร */
+            font-size: 11px;
         }
 
         input,
         select {
             width: 100%;
-            padding: 7px;
-            /* ลด padding จาก 10px */
-            margin-top: 4px;
-            /* ลด margin-top จาก 5px */
+            padding: 5px;
+            margin-top: 3px;
             border: 1px solid #ccc;
-            border-radius: 6px;
-            /* ลด border-radius จาก 8px */
-            font-size: 14px;
-            /* เล็กลงนิดหน่อย */
+            border-radius: 4px;
+            font-size: 12px;
         }
 
         button {
             width: 100%;
-            padding: 10px;
-            /* ลด padding จาก 12px */
-            margin-top: 15px;
-            /* ลด margin-top จาก 20px */
+            padding: 8px;
+            margin-top: 12px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 6px;
-            /* ลด border-radius */
+            border-radius: 4px;
             cursor: pointer;
-            font-size: 14px;
-            /* ลดขนาดฟอนต์ */
+            font-size: 13px;
         }
 
         button:hover {
@@ -83,18 +72,15 @@
         }
 
         .result {
-            margin-top: 15px;
-            /* ลด margin-top */
+            margin-top: 12px;
             text-align: center;
-            font-size: 15px;
-            /* ลดขนาดฟอนต์ */
+            font-size: 13px;
             color: #333;
             white-space: pre-line;
         }
 
         p {
-            font-size: 12px;
-            /* ลดขนาดฟอนต์ย่อหน้าด้านล่างหัวข้อ */
+            font-size: 10px;
         }
     </style>
 
