--- a/HogTransformation1.html
+++ b/HogTransformation1.html
@@ -93,7 +93,7 @@
         <label for="formula">เลือกสูตร:</label>
         <select id="formula" onchange="handleFormulaChange()">
             <option value="1">t = [(w x c) ÷ (v x a)] x z [ สูตรโบราณ (ไม่ใช้แล้ว) ]</option>
-            <option value="2">T = [(W x F) ÷ (g x S)] x 10² [ สูตรการคำค่าในการเปลี่ยนรูป ]</option>
+            <option value="2">T = [(W x F) ÷ (g x S)] x 10² [ สูตรการคำนวณค่าในการเปลี่ยนรูป ]</option>
             <option value="3">W² = [(a² + b²) / L] - f [ สูตรการคำนวณค่าสัมประสิทธิ์ไม้กายสิทธิ์ ]</option>
         </select>
 
