--- a/Clock.html
+++ b/Clock.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>นาฬิกาเข็มตัวเลข</title>
+  <title>Clockgital</title>
   <style>
     body {
       background: #111;
