--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <button class="button" onclick="window.location.href='KhumThongChume.html'">เกมคำต้องเชื่อม</button>
         <button class="button" onclick="window.location.href='Bodrongtod.html'">สุ่มบทลงโทษ</button>
         <button class="button" onclick="window.location.href='PueanTaeBook.html'">หนังสือเพื่อนแท้</button>
+        <button class="button" onclick="window.location.href='Clock.html'">นาฬิกา?</button>
         <button class="button" onclick="window.location.href='transkeyboard.html'">แปลงข้อความลืมเปลี่ยนภาษา</button>
         <button class="button" onclick="window.location.href='transflow.html'">แปลงไฟล์</button>
         <button class="button" onclick="window.location.href='Birthday.html'">ทายวันเกิด</button>
