--- a/Clock.html
+++ b/Clock.html
@@ -30,7 +30,7 @@
       transform: translate(-50%, -50%);
       font-size: 300px;
       font-weight: 900;
-      color: rgba(255, 255, 255, 0.5);
+      color: #111;
       user-select: none;
       pointer-events: none;
       letter-spacing: 0.1em;
@@ -92,6 +92,7 @@
 </head>
 <body>
   <div class="clock">
+    <div class="digital-bg" id="digital-bg">00:00</div>
     <div class="made-by-bg">Made by Overflow</div>
 
     <div class="hand hour" id="hour-hand"></div>
