--- a/Clock.html
+++ b/Clock.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Clockgital</title>
   <style>
     body {
@@ -56,7 +56,7 @@
 
     .made-by-bg {
       position: absolute;
-      top: calc(50% + 180px); 
+      top: calc(50% + 220px); 
       left: 50%;
       transform: translateX(-50%);
       font-size: 40px;
@@ -90,6 +90,18 @@
       user-select: none;
     }
 
+    .hour .num {
+      color: #ffffff; 
+    }
+
+    .minute .num {
+      color: #ffffff; 
+    }
+
+    .second .num {
+      color: #00ff00; 
+    }
+
     .hour { z-index: 5; }
     .minute { z-index: 4; }
     .second { z-index: 2; }
@@ -109,7 +121,6 @@
 </head>
 <body>
   <div class="clock" id="clock">
-    <!-- ตัวเลขรอบนาฬิกา -->
     <div class="number num-12">12</div>
     <div class="number num-3">3</div>
     <div class="number num-6">6</div>
@@ -129,7 +140,6 @@
     const minuteHand = document.getElementById("minute-hand");
     const secondHand = document.getElementById("second-hand");
 
-    // สร้างขีดรอบนาฬิกา
     function createTicks() {
       for (let i = 0; i < 60; i++) {
         const tick = document.createElement("div");
@@ -138,8 +148,6 @@
         clock.appendChild(tick);
       }
     }
-
-    createTicks();
 
     function createNumbers(hand, value, count = 4) {
       hand.innerHTML = '';
@@ -161,15 +169,16 @@
       const minuteDeg = (minute + second / 60) * 6 - 90;
       const secondDeg = second * 6 - 90;
 
-      createNumbers(hourHand, now.getHours());
-      createNumbers(minuteHand, minute, 8);
-      createNumbers(secondHand, second, 10);
+      createNumbers(hourHand, now.getHours(), 4);
+      createNumbers(minuteHand, minute, 5);
+      createNumbers(secondHand, second, 6);
 
       hourHand.style.transform = `rotate(${hourDeg}deg) translateX(20%)`;
       minuteHand.style.transform = `rotate(${minuteDeg}deg) translateX(20%)`;
       secondHand.style.transform = `rotate(${secondDeg}deg) translateX(20%)`;
     }
 
+    createTicks();
     setInterval(updateClock, 1000);
     updateClock();
   </script>
